--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -3,7 +3,8 @@
  * Copyright 2013-2017 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-landing-page/blob/master/LICENSE)
  */
-
+@import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css")
+  
 body, html {
   width: 100%;
   height: 100%;
