--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -14,12 +14,16 @@ p a {
 }
 
 h1,
-h2,
+h2 {
+  font-weight: 800;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
 h3,
 h4,
 h5,
 h6 {
-  font-weight: 800;
+  font-weight: 400;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
