--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -49,10 +49,10 @@ blockquote {
   margin-top: 60px;
 }.
 
-section-heading2 {
+.section-heading2 {
   font-size: 25px;
   font-weight: 300;
-  margin-top: 60px;
+  margin-top: 50px;
 }
 
 .caption {
