--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -23,7 +23,8 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: 800;
+  font-size: 25px;
+  font-weight: 650;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
