--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -1,7 +1,7 @@
 body {
   font-size: 20px;
   color: #212529;
-  font-family: 'Lora', 'Times New Roman', serif;
+  font-family: Calibri, 'Lora', 'Times New Roman', serif;
 }
 
 p {
@@ -16,7 +16,7 @@ p a {
 h1,
 h2 {
   font-weight: 800;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: Helvetica, 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 
 h3,
@@ -24,8 +24,8 @@ h4,
 h5,
 h6 {
   font-size: 25px;
-  font-weight: 650;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: 600;
+  font-family: Helvetica, 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 
 a {
